@@ -54,6 +54,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15828: Restore support for C extensions in imp.load_module()
+
 - Issue #10650: Deprecate the watchexp parameter of the Decimal.quantize()
   method.
 
